test/lambda/negative/syntax/eq_in_condition.ls
// @expect-error: E100
// @description: Using '=' instead of '==' in if condition

let x = if (x = 5) 1 else 2
